--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <iframe src="https://drive.usercontent.google.com/u/0/uc?id=1-Dp4CFZSdYYB_ajKvYmucdki5AfuM83D&export=download">
+    <iframe src="/balls.zip/balls.html" width="640" height="408" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </body>
 </html>
