--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <iframe src="/balls.zip/balls.html" width="640" height="408" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe src="/balls.zip/index.html" width="640" height="408" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </body>
 </html>
